--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "homepage": "https://SashaIlchenko.github.io/goit-react-hw-04-images/",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "react-hot-toast": "^2.4.0",
+    "axios": "^1.3.4",
+    "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
